# aws-encryption-sdk-python

./: .coveragerc  .coveragercmpl  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  SUPPORT_POLICY.rst  VERSIONING.rst  appveyor.yml  buildspec.yml  debug_unicode.py  linter-requirements.txt  park.cfg  requirements.txt  requirements_mpl.txt  setup.cfg  setup.py  test_1.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_2.py  test_20.py  test_21.py  test_22.py  test_23.py  test_24.py  (+34 more)
.github/: dependabot.yml
.github/workflows/: ci_codebuild-tests.yml  ci_codebuild_batch.yml  ci_decrypt-oracle.yaml  ci_static-analysis.yaml  ci_test-vector-handler.yaml  ci_tests.yaml  daily_ci.yml  debug-unicode.yml  dependabot-auto-merge.yml  pull.yml  push.yml  repo-sync.yml  reproduce_bug.yaml
aws_encryption_sdk/: __init__.py  exceptions.py  identifiers.py  streaming_client.py  structures.py
aws_encryption_sdk/caches/: __init__.py  base.py  local.py  null.py
aws_encryption_sdk/internal/: __init__.py  defaults.py  identifiers.py  str_ops.py  structures.py  utils.py
aws_encryption_sdk/key_providers/: base.py  kms.py  raw.py
aws_encryption_sdk/materials_managers/: __init__.py  base.py  caching.py  default.py
cfn/: ESDK-Python.yml  Public-ESDK-Python-CI.yml
codebuild/compliance/: compliance.yml
codebuild/coverage/: coverage.yml  coverage_mpl.yml
codebuild/py27/: awses_1.7.1.yml  awses_2.0.0.yml  awses_latest.yml  awses_local.yml  examples.yml  integ.yml
codebuild/py310/: awses_local.yml  decrypt_dafny_esdk_vectors.yml  decrypt_masterkey_with_js.yml  decrypt_masterkey_with_masterkey.yml  decrypt_net_401_vectors.yml  encrypt_masterkey.yml  examples copy.yml  examples.yml  generate_decrypt_vectors_masterkey.yml  integ copy.yml  integ.yml
codebuild/py311/: awses_local.yml  awses_local_mpl.yml  decrypt_dafny_esdk_vectors_keyrings.yml  decrypt_dafny_esdk_vectors_masterkey.yml  decrypt_golden_manifest_with_keyrings.yml  decrypt_golden_manifest_with_masterkey.yml  decrypt_keyrings_with_js.yml  decrypt_keyrings_with_keyrings.yml  decrypt_keyrings_with_masterkey.yml  decrypt_masterkey_with_js.yml  decrypt_masterkey_with_keyrings.yml  decrypt_masterkey_with_masterkey.yml  decrypt_net_401_vectors_keyrings.yml  decrypt_net_401_vectors_masterkey.yml  encrypt_keyrings.yml  encrypt_masterkey.yml  examples.yml  examples_mpl.yml  generate_decrypt_vectors_keyrings.yml  generate_decrypt_vectors_masterkey.yml  integ.yml  integ_mpl.yml  mplawses_local_mpl.yml  (+1 more)
compliance_exceptions/: aws-kms-mrk-aware-master-key-provider.py  aws-kms-mrk-aware-master-key.py  aws-kms-mrk-aware-multi-keyrings.py  aws-kms-mrk-aware-symmetric-keyring.py  aws-kms-mrk-aware-symmetric-region-discovery-keyring.py
decrypt_oracle/: MANIFEST.in  README.rst  app.py  requirements-actual.txt  requirements.txt  setup.cfg  setup.py  tox.ini
decrypt_oracle/.chalice/: build-requirements.py  buildspec.yaml  config.json  pipeline.py  policy-dev.json
decrypt_oracle/src/: pylintrc
decrypt_oracle/src/aws_encryption_sdk_decrypt_oracle/: __init__.py  app.py
decrypt_oracle/src/aws_encryption_sdk_decrypt_oracle/key_providers/: __init__.py  counting.py  null.py
decrypt_oracle/src/aws_encryption_sdk_decryption_oracle/: __init__.py  app.py
decrypt_oracle/src/aws_encryption_sdk_decryption_oracle/key_providers/: counting.py  null.py  null_master_key.py
decrypt_oracle/test/: __init__.py  pylintrc  requirements.txt  test_n_generate_test_vectors.py
decrypt_oracle/test/integration/: __init__.py  integration_test_utils.py  test_i_decrypt_oracle.py
decrypt_oracle/test/unit/key_providers/: test_u_counting.py  test_u_null.py
decrypt_oracle/test/vectors/: decrypt_vectors.json
dev_requirements/: ci-requirements.txt  doc-requirements.txt  linter-requirements.txt  release-requirements.txt  test-requirements.txt
doc/: conf.py  index.rst  requirements.txt
examples/: README.md  __init__.py
performance_tests/: README.md  README.rst  consolidate_results.py  pylintrc  requirements.txt  requirements_mpl.txt  setup.cfg  setup.py  tox.ini
src/: pylintrc
test/: freeze-upstream-requirements.sh  pylintrc  requirements.txt  upstream-requirements-py27.txt  upstream-requirements-py311.txt  upstream-requirements-py37.txt  upstream.md
test_vector_generator/: setup.cfg  setup.py  tox.ini
test_vector_handlers/: MANIFEST.in  README.rst  requirements.txt  requirements_mpl.txt  setup.py  tox.ini
(+679 files in other folders)
